# jadwal-sholat

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: qa.yml  release.yml
src/: constants.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/api/: aladhan.ts  geolocation.ts  myquran.ts
src/services/: countdown.ts  notifications.ts  settings.ts
src/types/: index.ts
src/ui/: city-search.ts  render.ts
