[package]
name = "jadwal_sholat"
version = "1.1.1"
description = "Ramadan Prayer Times System Tray App"
authors = ["you"]
edition = "2021"

[lib]
name = "jadwal_sholat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
dark-light = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
